--- a/Lib.WindowsAutomation/Lib.WindowsAutomation.csproj
+++ b/Lib.WindowsAutomation/Lib.WindowsAutomation.csproj
@@ -3,16 +3,19 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net472</TargetFramework>
-	  <Version>1.0.4.1</Version>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="UIAComWrapper" Version="1.1.0.14" />
+    <PackageReference Include="Interop.UIAutomationClient" Version="10.19041.0" />
     <PackageReference Include="WindowsBase" Version="4.6.1055" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="UIAutomationTypes" />
+    <Reference Include="UIAutomationProvider" />
   </ItemGroup>
+
 
 </Project>
