--- a/Lib.WindowsAutomation.Tests/Lib.WindowsAutomation.Tests.csproj
+++ b/Lib.WindowsAutomation.Tests/Lib.WindowsAutomation.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RCGT.WindowsAutomation\RCGT.WindowsAutomation.csproj" />
+    <ProjectReference Include="..\Lib.WindowsAutomation\Lib.WindowsAutomation.csproj" />
   </ItemGroup>
 
 </Project>
